<resources>
    <string name="app_name">CRYPTINFOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btc">BTC</string>
    <string name="btc_bitcoin">BTC | Bitcoin</string>
    <string name="_12_345">$ 12.345</string>
    <string name="_1h_100">1h : 100%</string>
    <string name="_7d_100">7d : 100%</string>
    <string name="_1d_100">1d : 100%</string>
</resources>